--- a/src/main/resources/static/manage/foodAdd.html
+++ b/src/main/resources/static/manage/foodAdd.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>添加商品</title>
+    <title>添加菜品</title>
     <link href="lib/layui/css/layui.css" rel="stylesheet" type="text/css"/>
 
     <style>
@@ -17,7 +17,8 @@
             width: 400px;
             margin: 30px auto;
         }
-        .must:after{
+
+        .must:after {
             content: "*";
             color: red;
             margin-left: 3px;
@@ -29,43 +30,43 @@
 <div>
     <form id="editForm" class="layui-form">
         <div class="layui-form-item">
-            <label class="layui-form-label must" for="fname">商品名称</label>
+            <label class="layui-form-label must" for="foodName">菜品名称</label>
             <div class="layui-input-inline">
-                <input type="text" name="fname" id="fname" required placeholder="请输入商品名称"
+                <input type="text" id="foodName" required placeholder="请输入菜品名称"
                        autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
-        <label class="layui-form-label must" for="price">商品单价</label>
-        <div class="layui-input-inline">
-            <input type="text" name="fname" id="price" required placeholder="请输入商品单价"
-                   autocomplete="off" class="layui-input">
-        </div>
-    </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label must" for="measurement">计量单位（如：/份）</label>
+            <label class="layui-form-label must" for="foodPrice">菜品单价</label>
             <div class="layui-input-inline">
-                <input type="text" name="fname" id="measurement" required placeholder="请输入商品计量单位"
+                <input type="text" id="foodPrice" required placeholder="请输入菜品单价"
                        autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label must" for="introduce">商品简介</label>
+            <label class="layui-form-label must" for="foodMeasurement">计量单位（如：/份）</label>
             <div class="layui-input-inline">
-                <input type="text" name="fname" id="introduce" required placeholder="请输入商品简介"
+                <input type="text" id="foodMeasurement" required placeholder="请输入菜品计量单位"
                        autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label must" for="img">图片</label>
+            <label class="layui-form-label must" for="foodIntroduce">菜品简介</label>
             <div class="layui-input-inline">
-                <input type="text" name="fname" id="img" required placeholder="请输入商品图片路径"
+                <input type="text" id="foodIntroduce" required placeholder="请输入菜品简介"
                        autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label must" for="uploadPlan">商品图片</label>
-            <button type="button" class="layui-btn" id="uploadPlan"><i class="layui-icon"></i>上传商品图片</button>
+            <label class="layui-form-label must" for="foodImg">图片</label>
+            <div class="layui-input-inline">
+                <input type="text" id="foodImg" required placeholder="请输入菜品图片路径"
+                       autocomplete="off" class="layui-input">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label must" for="uploadPlan">菜品图片</label>
+            <button type="button" class="layui-btn" id="uploadPlan"><i class="layui-icon"></i>上传菜品图片</button>
             <input class="layui-upload-file" type="file" accept="excel" name="file">
         </div>
         <div class="layui-form-item">
@@ -79,15 +80,15 @@
 <script src="js/jquery-3.3.1.js"></script>
 <script src="lib/layui/layui.js"></script>
 <script>
-    layui.use(['layer'], function() {
-        // 提交表单
+    layui.use(['layer'], function () {
         $('#submit').click(function () {
-            let fname = $('#fname').val();
-            let price = $('#price').val();
-            let measurement = $('#measurement').val();
-            let introduce = $('#introduce').val();
-            let img = $('#img').val();
-            if (fname == "" || price == "" || measurement == "" || introduce == "" || img == "") {
+            // 提交表单
+            let foodName = $('#foodName').val();
+            let foodPrice = $('#foodPrice').val();
+            let foodMeasurement = $('#foodMeasurement').val();
+            let foodIntroduce = $('#foodIntroduce').val();
+            let foodImg = $('#foodImg').val();
+            if (foodName == "" || foodPrice == "" || foodMeasurement == "" || foodIntroduce == "" || foodImg == "") {
                 layer.msg("请确保所需信息填写完毕");
                 return;
             } else {
@@ -95,13 +96,13 @@
                 $(function () {
                     $.ajax({
                         type: "post",
-                        url: path, // 需要带上项目名(只有上传文件的时候不需要)
+                        url: path,
                         data: {
-                            "fname": fname,
-                            "price": price,
-                            "measurement": measurement,
-                            "introduce":introduce,
-                            "img":img
+                            "foodName": foodName,
+                            "foodPrice": foodPrice,
+                            "foodMeasurement": foodMeasurement,
+                            "foodIntroduce": foodIntroduce,
+                            "foodImg": foodImg
                         },
                         dataType: "json",
                         success: function (response) {
