--- a/src/main/resources/static/front/my.html
+++ b/src/main/resources/static/front/my.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>StarryFood</title>
+    <title>StarryFood - 我的订单</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css/zerogrid.css">
     <link rel="stylesheet" href="css/style.css">
