--- a/src/main/resources/static/manage/foodList.html
+++ b/src/main/resources/static/manage/foodList.html
@@ -32,13 +32,14 @@
 
 <body class="layui-anim layui-anim-up">
 <button type="button" class="layui-btn layui-btn-normal" onclick="addFood()">添加菜品</button>
+<button type="button" class="layui-btn layui-btn-primary" onclick="javascript:location.reload();">刷新</button>
 <div class="layui-row" id="content">
    <!-- 显示全部菜品信息 -->
 </div>
 
 <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
-<script type="text/javascript" src="js/main.js"></script>
-<script src="lib/layui/layui.js"></script>
+<script type="text/javascript" src="lib/layui/layui.js"></script>
+<script type="text/javascript" src="js/foodList.js"></script>
 <script>
     layui.use(['layer'], function() {
         const path = location.protocol + "//" + window.location.host + "/starryfood";
@@ -50,13 +51,13 @@
                 const content = $('#content');
                 for (let i = 0; i < response.data.list.length; i++) {
                     const element = response.data.list[i];
-                    let elemItem = `<div class="layui-col-xs6 layui-col-sm6 layui-col-md4" id="${element.fid}">
+                    let elemItem = `<div class="layui-col-xs6 layui-col-sm6 layui-col-md4" id="${element.foodId}">
                     <figure>
-                        <img src="${element.img}">
-                        <figcaption>${element.fname}</figcaption>
+                        <img src="${element.foodImg}">
+                        <figcaption>${element.foodName}</figcaption>
                         <p>
-                            <button type="button" class="layui-btn" onclick="updateFood(${element.fid})">修改</button>
-                            <button type="button" class="layui-btn layui-btn-danger" onclick="deleteFood(${element.fid})">删除</button>
+                            <button type="button" class="layui-btn" onclick="updateFood(${element.foodId})">修改</button>
+                            <button type="button" class="layui-btn layui-btn-danger" onclick="deleteFood(this,'${element.foodId}')">删除</button>
                         </p>
                     </figure>
                 </div>`;
