--- a/src/main/resources/static/manage/foodUpdate.html
+++ b/src/main/resources/static/manage/foodUpdate.html
@@ -34,42 +34,43 @@
 <div>
     <form id="editForm" class="layui-form">
         <div class="layui-form-item">
-            <label class="layui-form-label must" for="fname">商品名称</label>
+            <label class="layui-form-label must" for="foodName">菜品名称</label>
             <div class="layui-input-inline">
-                <input type="text" id="fname" required placeholder="请输入商品名称"
+                <input type="text" id="foodName" required placeholder="请输入菜品名称"
                        autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label must" for="price">商品单价</label>
+            <label class="layui-form-label must" for="foodPrice">菜品单价</label>
             <div class="layui-input-inline">
-                <input type="text" id="price" required placeholder="请输入商品单价"
+                <input type="text" id="foodPrice" required placeholder="请输入菜品单价"
                        autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label must" for="measurement">计量单位（如：/份）</label>
+            <label class="layui-form-label must" for="foodMeasurement">计量单位（如：/份）</label>
             <div class="layui-input-inline">
-                <input type="text" id="measurement" required placeholder="请输入商品计量单位"
+                <input type="text" id="foodMeasurement" required placeholder="请输入菜品计量单位"
                        autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label must" for="introduce">商品简介</label>
+            <label class="layui-form-label must" for="foodIntroduce">菜品简介</label>
             <div class="layui-input-inline">
-                <textarea id="introduce" placeholder="请输入商品简介" class="layui-textarea"></textarea>
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label must" for="img">图片</label>
-            <div class="layui-input-inline">
-                <input type="text" name="fname" id="img" required placeholder="请输入商品图片路径"
+                <input type="text" id="foodIntroduce" required placeholder="请输入菜品简介"
                        autocomplete="off" class="layui-input">
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label must" for="uploadPlan">商品图片</label>
-            <button type="button" class="layui-btn" id="uploadPlan"><i class="layui-icon"></i>上传商品图片</button>
+            <label class="layui-form-label must" for="foodImg">图片</label>
+            <div class="layui-input-inline">
+                <input type="text" id="foodImg" required placeholder="请输入菜品图片路径"
+                       autocomplete="off" class="layui-input">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label must" for="uploadPlan">菜品图片</label>
+            <button type="button" class="layui-btn" id="uploadPlan"><i class="layui-icon"></i>上传菜品图片</button>
             <input class="layui-upload-file" type="file" accept="excel" name="file">
         </div>
         <div class="layui-form-item">
@@ -87,20 +88,20 @@
         const path = location.protocol + "//" + window.location.host + "/starryfood";
 
         const str = window.location.href;
-        const fid = str.substr(str.indexOf('=') + 1);
+        const foodId = str.substr(str.indexOf('=') + 1);
         // 获取原来的菜品信息进行回显
         $.ajax({
             type: "get",
-            url: path + "/food/getFoodById?fid=" + fid, // 需要带上项目名(只有上传文件的时候不需要)
+            url: path + "/food/getFoodById?foodId=" + foodId, // 需要带上项目名(只有上传文件的时候不需要)
             dataType: "json",
             success: function (response) {
                 if (response.code == 431) {
                     const element = response.data;
-                    $('#fname').val(element.fname);
-                    $('#price').val(element.price);
-                    $('#measurement').val(element.measurement);
-                    $('#introduce').val(element.introduce);
-                    $('#img').val(element.img);
+                    $('#foodName').val(element.foodName);
+                    $('#foodPrice').val(element.foodPrice);
+                    $('#foodMeasurement').val(element.foodMeasurement);
+                    $('#foodIntroduce').val(element.foodIntroduce);
+                    $('#foodImg').val(element.foodImg);
                 } else {
                     layer.msg(response.msg);
                 }
@@ -109,25 +110,25 @@
 
         // 提交表单
         $('#submit').click(function () {
-            let fname = $('#fname').val();
-            let price = $('#price').val();
-            let measurement = $('#measurement').val();
-            let introduce = $('#introduce').val();
-            let img = $('#img').val();
-            if (fname == "" || price == "" || measurement == "" || introduce == "" || img == "") {
+            let foodName = $('#foodName').val();
+            let foodPrice = $('#foodPrice').val();
+            let foodMeasurement = $('#foodMeasurement').val();
+            let foodIntroduce = $('#foodIntroduce').val();
+            let foodImg = $('#foodImg').val();
+            if (foodName == "" || foodPrice == "" || foodMeasurement == "" || foodIntroduce == "" || foodImg == "") {
                 layer.msg("请确保所需信息填写完毕");
                 return;
             } else {
                 $.ajax({
                     type: "post",
-                    url: path + '/food/update' + fid, // 需要带上项目名(只有上传文件的时候不需要)
+                    url: path + '/food/update', // 需要带上项目名(只有上传文件的时候不需要)
                     data: {
-                        "fid": fid,
-                        "fname": fname,
-                        "price": price,
-                        "measurement": measurement,
-                        "introduce":introduce,
-                        "img":img
+                        "foodId": foodId,
+                        "foodName": foodName,
+                        "foodPrice": foodPrice,
+                        "foodMeasurement": foodMeasurement,
+                        "foodIntroduce":foodIntroduce,
+                        "foodImg":foodImg
                     },
                     dataType: "json",
                     success: function (response) {
