--- a/src/main/resources/static/manage/index.html
+++ b/src/main/resources/static/manage/index.html
@@ -5,16 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
     <link rel="stylesheet" href="lib/layui/css/layui.css">
-    <title>Document</title>
+    <title>StarryFood后台管理系统</title>
     <style>
         .layui-layout-admin .layui-body {
             overflow: hidden;
         }
 
         /* 防止主页被关闭 */
-
         .layui-tab-title li:first-child .layui-tab-close {
             display: none;
         }
@@ -30,16 +28,12 @@
     <div class="layui-header">
         <div class="layui-logo">StarryFood后台管理系统</div>
         <ul class="layui-nav layui-layout-right">
-            <li class="layui-nav-item">
+            <li class="layui-nav-item" id="adminName">
                 <a href="javascript:;">
-                    <img src="images/user-default.png" class="layui-nav-img"> <span id="adminName">贤心</span>
+                    <img src="images/user-default.png" class="layui-nav-img"> <span>starryhu</span>
                 </a>
-                <dl class="layui-nav-child">
-                    <dd><a href="">基本资料</a></dd>
-                    <dd><a href="">安全设置</a></dd>
-                </dl>
             </li>
-            <li class="layui-nav-item"><a href="#" onclick="logout()">退出</a></li>
+            <li class="layui-nav-item"><a href="#" id="logout">退出</a></li>
         </ul>
     </div>
 
@@ -51,11 +45,11 @@
                                                          class="site-demo-active" data-type="tabAdd">主页</a></li>
                 <li class="layui-nav-item"><a href="#" data-url="foodList" data-title="菜品相关" data-id="11"
                                               class="site-demo-active" data-type="tabAdd">菜品相关</a></li>
-                <li class="layui-nav-item"><a href="#" data-url="allStuInMajor" data-title="订单相关" data-id="22"
+                <li class="layui-nav-item"><a href="#" data-url="orderList" data-title="订单相关" data-id="22"
                                               class="site-demo-active" data-type="tabAdd">订单相关</a></li>
-                <li class="layui-nav-item"><a href="#" data-url="allCustomerList" data-title="顾客相关" data-id="33"
+                <li class="layui-nav-item"><a href="#" data-url="customerList" data-title="顾客相关" data-id="33"
                                               class="site-demo-active" data-type="tabAdd">顾客相关</a></li>
-                <li class="layui-nav-item"><a href="#" data-url="allStuInMajor" data-title="管理员相关" data-id="44"
+                <li class="layui-nav-item"><a href="#" data-url="adminList" data-title="管理员相关" data-id="44"
                                               class="site-demo-active" data-type="tabAdd">管理员相关</a></li>
             </ul>
         </div>
@@ -88,10 +82,61 @@
 </div>
 
 <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
-<script src="lib/layui/layui.js" charset="utf-8"></script>
-<script src="js/index.js" charset="utf-8"></script>
+<script src="lib/layui/layui.js"></script>
+<script src="js/index.js"></script>
 <script>
+    layui.use(['layer'], function () {
+        // 获取当前登录的管理员
+        $(function () {
+            $.ajax({
+                type: "get",
+                url: path + "/admin/getLoginedAdmin",
+                dataType: "json",
+                success: function (response) {
+                    if (response.code != '0') {
+                        layer.msg(`您还未登录！请先登录！`, {
+                            time: 1500,
+                            end: function () {
+                                location.href = "login.html";
+                            }
+                        })
+                    } else {
+                        // 将用户名取出来显示
+                        $('#adminName span').text(response.data.adminName);
+                        $('#adminName').bind('click', function () {
+                            layer.open({
+                                title: '修改个人密码',
+                                type: 2,
+                                content: 'editMyPsw.html',
+                                area: ['500px', '400px'],
+                                // offset: '20%',
+                                shade: 0.5,
+                                shadeClose: true,//点击遮罩关闭
+                            });
+                        });
+                    }
+                }
+            });
 
+            $('#logout').bind('click', function () {
+                $.ajax({
+                    type: "get",
+                    url: path + "/admin/logout",
+                    dataType: "json",
+                    success: function (response) {
+                        if (response.code == 0) {
+                            layer.msg('退出成功', {time: 2000}, function () {
+                                location.href = 'login.html'
+                            });
+                        } else {
+                            layer.msg('退出失败')
+                        }
+                        return false;
+                    }
+                });
+            });
+        })
+    })
 </script>
 </body>
 
