--- a/src/main/resources/static/manage/foodList.html
+++ b/src/main/resources/static/manage/foodList.html
@@ -32,7 +32,9 @@
 
 <body class="layui-anim layui-anim-up">
 <button type="button" class="layui-btn layui-btn-normal" onclick="addFood()">添加菜品</button>
-<button type="button" class="layui-btn layui-btn-primary" onclick="javascript:location.reload();">刷新</button>
+<button type="button" class="layui-btn layui-btn-primary" onclick="javascript:location.reload();">
+    <i class="layui-icon layui-icon-refresh-3"></i>
+</button>
 <div class="layui-row" id="content">
    <!-- 显示全部菜品信息 -->
 </div>
